--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,8 +45,6 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit2_version"
     implementation "com.squareup.retrofit2:converter-gson:2.3.0"
 
-    //gson
-    implementation 'com.google.code.gson:gson:2.8.6'
 
     //Okhttp3
     implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
@@ -69,4 +67,8 @@ dependencies {
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.0.0"
     annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
+
+    // retrofit convert Moshi
+    implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
+
 }
